--- a/Lab Week 5/Lab Week 5/Views/Kid/Create.cshtml
+++ b/Lab Week 5/Lab Week 5/Views/Kid/Create.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Lab_Week_5.Models.View.KidViewModel
 
 @{
-    ViewBag.Title = "Create Kid";
+    ViewBag.Title = "Create";
 }
 
 <h2>Create</h2>
@@ -63,14 +63,7 @@
             </div>
         </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.UserId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.UserId, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.UserId, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
+        
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
